packages/svelte/tests/compiler-errors/samples/catch-before-closing/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-catch-placement',
		message: 'Expected to close {#each} block before seeing {:catch} block',
		position: [41, 41]
	}
});
